navbar second correction align with logo

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,7 +1,7 @@
 .navbar-container {
     display: flex;
     flex-direction: row;
-    justify-content: none;
+    justify-content: space-around;
     gap: 40px;
     margin-top: 32px;
     padding: 20px;
